--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
-    <style>
-      h1 {
-        text-align: center;
-        color: blueviolet;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Hello Git😺</h1>
+    <script src="script.js"></script>
   </body>
 </html>
